--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -14,12 +14,22 @@ source:
 build:
   number: 0
   script:
-    - if: linux
+    - if: linux and (build_platform != target_platform)
       then:
-        - cmake -E env CXXFLAGS=-D_LIBCPP_DISABLE_AVAILABILITY cmake -S $SRC_DIR -DBUILD_EXECUTABLE=ON -DBLA_VENDOR="Generic" $CMAKE_ARGS
+        - cmake -S $SRC_DIR -DHDF5_LINKS_EXITCODE=0 -DBUILD_EXECUTABLE=ON -DBLA_VENDOR="Generic" $CMAKE_ARGS
         - cmake --build .
         - cmake --install .
-    - if: osx
+    - if: linux and (build_platform == target_platform)
+      then:
+        - cmake -S $SRC_DIR -DBUILD_EXECUTABLE=ON -DBLA_VENDOR="Generic" $CMAKE_ARGS
+        - cmake --build .
+        - cmake --install .
+    - if: osx and (build_platform != target_platform)
+      then:
+        - cmake -E env CXXFLAGS=-D_LIBCPP_DISABLE_AVAILABILITY cmake -S $SRC_DIR -DHDF5_LINKS_EXITCODE=0 -DBUILD_EXECUTABLE=ON $CMAKE_ARGS
+        - cmake --build .
+        - cmake --install .
+    - if: osx and (build_platform == target_platform)
       then:
         - cmake -E env CXXFLAGS=-D_LIBCPP_DISABLE_AVAILABILITY cmake -S $SRC_DIR -DBUILD_EXECUTABLE=ON $CMAKE_ARGS
         - cmake --build .
