--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -39,8 +39,8 @@ build:
         - cmake -S %SRC_DIR% -DCBLAS_H_DIR=%LIBRARY_INC% -DBUILD_EXECUTABLE=ON %CMAKE_ARGS%
         - cmake --build . --config Release
         - cmake --install .
-        - gendef - %LIBRARY_BIN%\nmflib.dll >%LIBRARY_LIB%\nmflib.def
-        - dlltool -k --output-lib %LIBRARY_LIB%\nmflib.dll.a --def %LIBRARY_LIB%\nmflib.def
+        - gendef %LIBRARY_BIN%\nmflib.dll
+        - dlltool -k --output-lib %LIBRARY_LIB%\nmflib.dll.a --def nmflib.def
 
 requirements:
   build:
