--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -40,7 +40,7 @@ build:
         - cmake --build . --config Release
         - cmake --install .
         - gendef %LIBRARY_BIN%\nmflib.dll
-        - dlltool -k --output-lib %LIBRARY_LIB%\nmflib.dll.a --def nmflib.def
+        - dlltool -k --output-lib %LIBRARY_LIB%\nmflib.dll.a --def nmflib.def --verbose
 
 requirements:
   build:
