--- a/recipe/variants.yaml
+++ b/recipe/variants.yaml
@@ -7,13 +7,26 @@ c_stdlib:
     then:
       - vs
       - m2w64-sysroot
+  - if: linux
+    then: sysroot
+  - if: osx
+    then: macos_deployment_version
 c_compiler:
   - if: win
     then:
       - vs2019
       - gcc
+  - if: linux
+    then: gcc
+  - if: osx
+    then: clang
+
 cxx_compiler:
   - if: win
     then:
       - vs2019
       - gxx
+  - if: linux
+    then: gxx
+  - if: osx
+    then: clangxx
