--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -41,7 +41,7 @@ build:
         - cmake --install .
     - if: win and (c_compiler == 'gcc')
       then:
-        - cmake -G "MinGW Makefiles" -S %SRC_DIR% -DCBLAS_H_DIR=%LIBRARY_INC% -DBUILD_EXECUTABLE=ON %CMAKE_ARGS%
+        - cmake -G "Unix Makefiles" -S %SRC_DIR% -DCBLAS_H_DIR=%LIBRARY_INC% -DBUILD_EXECUTABLE=ON %CMAKE_ARGS%
         - cmake --build .
         - cmake --install .
 
@@ -50,7 +50,7 @@ requirements:
     - if: unix
       then: make
     - if: win and (c_compiler == 'gcc')
-      then: m2w64-make
+      then: make
     - ${{ compiler('c') }}
     - ${{ stdlib("c") }}
     - ${{ compiler('cxx') }}
