--- a/recipe/variants.yaml
+++ b/recipe/variants.yaml
@@ -1,32 +1,7 @@
-zip_keys:
- - [c_compiler, c_stdlib, cxx_compiler]
-
-
-c_stdlib:
+is_mingw:
   - if: win
     then:
-      - vs
-      - m2w64-sysroot
-  - if: linux
-    then: sysroot
-  - if: osx
-    then: macosx_deployment_target
-c_compiler:
-  - if: win
-    then:
-      - vs2019
-      - gcc
-  - if: linux
-    then: gcc
-  - if: osx
-    then: clang
-
-cxx_compiler:
-  - if: win
-    then:
-      - vs2019
-      - gxx
-  - if: linux
-    then: gxx
-  - if: osx
-    then: clangxx
+      - true
+      - false
+    else:
+      - false
