--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -41,7 +41,7 @@ build:
         - cmake --install .
     - if: win and (is_mingw == true)
       then:
-        - cmake -G "Unix Makefiles" -S %SRC_DIR% -DCBLAS_H_DIR=%LIBRARY_INC% -DBUILD_EXECUTABLE=ON %CMAKE_ARGS%
+        - cmake -G "Unix Makefiles" -S %SRC_DIR% -DHDF5_LINKS=1 -DCBLAS_H_DIR=%LIBRARY_INC% -DBUILD_EXECUTABLE=ON %CMAKE_ARGS%
         - cmake --build .
         - cmake --install .
 
