--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -58,7 +58,7 @@ requirements:
         - ${{ compiler('m2w64_c') }}
         - ${{ stdlib("m2w64_c") }}
         - ${{ compiler('m2w64_cxx') }}
-    - if: c_compiler == 'gcc'
+    - if: (c_compiler == 'gcc') or (is_mingw == true)
       then: libgomp
       else: llvm-openmp
     - cmake
@@ -67,7 +67,7 @@ requirements:
     - libhwloc >=2.0.0,<3.0.0
     - zlib
     - hdf5 >=1.10
-    - if: c_compiler == 'gcc'
+    - if: (c_compiler == 'gcc') or (is_mingw == true)
       then: libgomp
       else: llvm-openmp
     - libblas
