--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -64,7 +64,9 @@ requirements:
     - cmake
     - pkg-config
     - if: is_mingw == true
-      then: libgcc <15
+      then:
+        - libgcc <15
+        - libgomp <15
   host:
     - libhwloc >=2.0.0,<3.0.0
     - zlib
