--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -24,6 +24,15 @@ libcblas:
 - 3.9.* *netlib
 liblapack:
 - 3.9.* *netlib
+pin_run_as_build:
+  python:
+    min_pin: x.x
+    max_pin: x.x
+python:
+- '3.10'
+- '3.11'
+- '3.12'
+- '3.13'
 target_platform:
 - linux-aarch64
 zip_keys:
