--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -28,6 +28,15 @@ llvm_openmp:
 - '18'
 macos_machine:
 - x86_64-apple-darwin13.4.0
+pin_run_as_build:
+  python:
+    min_pin: x.x
+    max_pin: x.x
+python:
+- '3.10'
+- '3.11'
+- '3.12'
+- '3.13'
 target_platform:
 - osx-64
 zip_keys:
