--- a/.ci_support/win_64_is_mingwmingw_.yaml
+++ b/.ci_support/win_64_is_mingwmingw_.yaml
@@ -28,6 +28,15 @@ m2w64_cxx_compiler:
 - gxx
 m2w64_cxx_compiler_version:
 - '13'
+pin_run_as_build:
+  python:
+    min_pin: x.x
+    max_pin: x.x
+python:
+- '3.10'
+- '3.11'
+- '3.12'
+- '3.13'
 target_platform:
 - win-64
 zlib:
