--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -115,7 +115,7 @@ outputs:
       skip: is_mingw == 'mingw_'
       number: ${{ py_build_number }}
       string: ${{ python | version_to_buildstring }}_h${{ hash }}_${{ py_build_number }}
-      script: pip install . -vv
+      script: pip install . -vv --no-deps --no-build-isolation
     requirements:
       build:
         - if: unix
