some env tweaks

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -119,15 +119,19 @@ outputs:
         - if: osx and (build_platform != target_platform)
           then:
           - export SKBUILD_CMAKE_ARGS=$CMAKE_ARGS
-          - pip install . -vv --no-deps --no-build-isolation --config-settings=cmake.args=-DHDF5_LINKS_EXITCODE=0;-DCMAKE_CXX_FLAGS=-D_LIBCPP_DISABLE_AVAILABILITY
+          - export MACOSX_DEPLOYMENT_TARGET=10.13
+          - export CXXFLAGS=-D_LIBCPP_DISABLE_AVAILABILITY
+          - pip install . -vv --no-deps --no-build-isolation --config-settings=cmake.args=-DHDF5_LINKS=1
         - if: osx and (build_platform == target_platform)
           then:
           - export SKBUILD_CMAKE_ARGS=$CMAKE_ARGS
+          - export MACOSX_DEPLOYMENT_TARGET=10.13
+          - export CXXFLAGS=-D_LIBCPP_DISABLE_AVAILABILITY
           - pip install . -vv --no-deps --no-build-isolation --config-settings=cmake.args=-DCMAKE_CXX_FLAGS=-D_LIBCPP_DISABLE_AVAILABILITY
         - if: linux and (build_platform != target_platform)
           then:
           - export SKBUILD_CMAKE_ARGS=$CMAKE_ARGS
-          - pip install . -vv --no-deps --no-build-isolation --config-settings=cmake.args=-DHDF5_LINKS_EXITCODE=0;-DBLA_VENDOR="Generic"
+          - pip install . -vv --no-deps --no-build-isolation --config-settings=cmake.args=-DHDF5_LINKS=1;-DBLA_VENDOR="Generic"
         - if: linux and (build_platform == target_platform)
           then:
           - export SKBUILD_CMAKE_ARGS=$CMAKE_ARGS
