Revert "select vs on win"
This reverts commit 461ae2d2b3a999e3e226827e2a59f23bd193e919.

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -158,9 +158,7 @@ outputs:
             - python
             - cross-python_${{ target_platform }}
       host:
-        - if: win
-          then: ${{ pin_subpackage("libplanc * *vs", exact=True) }}
-          else: ${{ pin_subpackage("libplanc", exact=True) }}
+        - ${{ pin_subpackage("libplanc", exact=True) }}
         - if: (c_compiler == 'gcc')
           then: libgomp
           else: llvm-openmp
