run requirements are cool

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -186,6 +186,9 @@ outputs:
           then: libblas * *accelerate
           else: libblas
         - python
+        - scipy
+        - progressbar2
+        - threadpoolctl
     tests:
       - python:
           imports:
